force-app/main/default/objects/Survey__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <description>Is this survey template active</description>
    <defaultValue>true</defaultValue>
</CustomField>