force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <inlineHelpText>Type of survey</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Impressions</fullName>
            </value>
            <value>
                <fullName>End of Respite</fullName>
            </value>
            <value>
                <fullName>Family Satisfaction</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Complaint Follow-up</fullName>
            </value>
            <value>
                <fullName>Exit Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>